1
   Compiling algorithms_in_a_nutshell v0.1.0 (file:///Users/kaiyin/Documents/workspace-eclipse-neon/algorithms_in_a_nutshell)
error[E0277]: the trait bound `&std::collections::HashSet<convex_hull::Point>: std::iter::IntoIterator` is not satisfied
   --> src/convex_hull.rs:155:2
    |
155 | 	for p_i in points {
    | 	^ trait `&std::collections::HashSet<convex_hull::Point>: std::iter::IntoIterator` not satisfied
    |
    = help: the following implementations were found:
    = help:   <&'a std::collections::HashSet<T, S> as std::iter::IntoIterator>
    = help:   <std::collections::HashSet<T, S> as std::iter::IntoIterator>
    = note: required by `std::iter::IntoIterator::into_iter`

error: no method named `difference` found for type `&std::collections::HashSet<convex_hull::Point>` in the current scope
   --> src/convex_hull.rs:156:24
    |
156 | 		let minus_i = points.difference(&(hashset!(p_i)));
    | 		                     ^^^^^^^^^^
    |
    = note: the method `difference` exists but the following trait bounds were not satisfied: `convex_hull::Point : std::hash::Hash`, `convex_hull::Point : std::hash::Hash`

error: no method named `difference` found for type `&std::collections::HashSet<convex_hull::Point>` in the current scope
   --> src/convex_hull.rs:158:25
    |
158 | 			let minus_j = points.difference(&(hashset!(p_j))); 
    | 			                     ^^^^^^^^^^
    |
    = note: the method `difference` exists but the following trait bounds were not satisfied: `convex_hull::Point : std::hash::Hash`, `convex_hull::Point : std::hash::Hash`

error: aborting due to 3 previous errors

error[E0277]: the trait bound `&std::collections::HashSet<convex_hull::Point>: std::iter::IntoIterator` is not satisfied
   --> src/convex_hull.rs:155:2
    |
155 | 	for p_i in points {
    | 	^ trait `&std::collections::HashSet<convex_hull::Point>: std::iter::IntoIterator` not satisfied
    |
    = help: the following implementations were found:
    = help:   <&'a std::collections::HashSet<T, S> as std::iter::IntoIterator>
    = help:   <std::collections::HashSet<T, S> as std::iter::IntoIterator>
    = note: required by `std::iter::IntoIterator::into_iter`

error: no method named `difference` found for type `&std::collections::HashSet<convex_hull::Point>` in the current scope
   --> src/convex_hull.rs:156:24
    |
156 | 		let minus_i = points.difference(&(hashset!(p_i)));
    | 		                     ^^^^^^^^^^
    |
    = note: the method `difference` exists but the following trait bounds were not satisfied: `convex_hull::Point : std::hash::Hash`, `convex_hull::Point : std::hash::Hash`

error: no method named `difference` found for type `&std::collections::HashSet<convex_hull::Point>` in the current scope
   --> src/convex_hull.rs:158:25
    |
158 | 			let minus_j = points.difference(&(hashset!(p_j))); 
    | 			                     ^^^^^^^^^^
    |
    = note: the method `difference` exists but the following trait bounds were not satisfied: `convex_hull::Point : std::hash::Hash`, `convex_hull::Point : std::hash::Hash`

error: aborting due to 3 previous errors

error: Could not compile `algorithms_in_a_nutshell`.

To learn more, run the command again with --verbose.
